--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Vignesh Sivakumar</title>
-  <link rel="stylesheet" href="css\style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,16 +15,16 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="CSS - My Site Images\cloud.png" alt="cloud_img">
+    <img class="top-cloud" src="cloud.png" alt="cloud_img">
     <h1>I'm Vignesh </h1>
     <h2>A Programmer</h2>
-    <img class="bottom-cloud" src="CSS - My Site Images\cloud.png" alt="cloud_img">
-    <img  src="CSS - My Site Images\mountain.png" alt="mountain_img">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud_img">
+    <img  src="mountain.png" alt="mountain_img">
 
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img class="profile-pic" src="CSS - My Site Images\1654792750638-modified.png" alt="profile-pic_img">
+      <img class="profile-pic" src="1654792750638-modified.png" alt="profile-pic_img">
       <h2>Hello.</h2>
       <p class="intro"> I am a student at NITT, batch of 2024. I am currently working on becoming a webdeveloper.</p>
     </div>
@@ -32,12 +32,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="code-pic" src="CSS - My Site Images\professional-web-design-and-custom-web-development-services-in-dubai-modified.png" alt="webdev_img">
+        <img class="code-pic" src="professional-web-design-and-custom-web-development-services-in-dubai-modified.png" alt="webdev_img">
         <h3>Web development</h3>
         <p>Currently not very good at it, but with time I will improve and this will become a strong skill</p>
       </div>
       <div class="skill-row">
-        <img class="basketball-pic" src="CSS - My Site Images\4c471cf11627bb47be91bf5646a65021--about-basketball-basketball-pictures-modified.png" alt="basketball_img">
+        <img class="basketball-pic" src="4c471cf11627bb47be91bf5646a65021--about-basketball-basketball-pictures-modified.png" alt="basketball_img">
         <h3>Basketball</h3>
         <p>Represented Kuwait in CBSE nationals in 2018 as the Captain and bagged the bronze medal .</p>
       </div>
